# slow-learner-convert

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
src/slow_learner_convert/: cli.py  constructor.py
